feat: update V-Room patent

--- a/MyProfile.html
+++ b/MyProfile.html
@@ -29,9 +29,12 @@
         GPA: 4.0/4.0 (UK Grading System)
     </div>
     <div>Expected degree: The first class with honors</div>
-    <div>Awards: 2020-2021 Zhejiang Provincial Scholarship, 2020 Head's Scholarship, 2020 Outstanding Member of Youth League</div>
+    <div>Awards: 2020-2021 Zhejiang Provincial Scholarship, 2020 Head's Scholarship, 2020 Outstanding Member of Youth
+        League
+    </div>
     <div>
-        Core modules: Machine Learning, Artificial Intelligence Method, Programming Paradigms, Database and Interfaces, Mathematics
+        Core modules: Machine Learning, Artificial Intelligence Method, Programming Paradigms, Database and Interfaces,
+        Mathematics
         for Computer Scientists, Systems and Architecture, Software Engineering, Programming and
         algorithm, Computer Fundamentals
     </div>
@@ -64,26 +67,35 @@
             <li>Construct two necessary databases with PostgreSQL, SQLalchem, Docker and Spark.</li>
             <li>Replicate the various credit risk model.</li>
             <li>Will propose, implement, and test novel data augmentation approach to address the population.</li>
-            <li>Will evaluate the credit risk models with Area Under Receiver Operating Characteristic (AUC), K-S, and GINI statistics.</li>
+            <li>Will evaluate the credit risk models with Area Under Receiver Operating Characteristic (AUC), K-S, and
+                GINI statistics.
+            </li>
         </ul>
     </div>
     </p>
     <p>
     <div>
-    <div><strong>Data Analysis on the Single Cell Transplantation</strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        April, 2021 - Sept, 2021
-    </div>
-    <ul>
-        <li>This research project is supervised by <a
-                href="https://www.nottingham.edu.cn/en/People/Profile.aspx?id=6dacb624-2867-4039-8b87-fffad430fa7a&language=en-GB">Prof.
-            Vladimir Brusic</a> Li Dak Sum Chair Professor at the University of Nottingham Ningbo China, School of
-            Computer Science.
-        </li>
-        <li>Clean, standardize, control quality of the single cell transplantation data with various convention.</li>
-        <li>Automatize the four cell type classification and visualization methods, distance profile, RNA profile, Protein Marker Profile, Artificial Neural Network.</li>
-        <li>Investigate the rationales of the performance degradation of the ANN model on the single cell transplantation data with higher gene expression.</li>
-        <li>Investigate, propose, implement, and test a novel normalization approach for the promising and robust distance profile analysis.</li>
-    </ul>
+        <div><strong>Data Analysis on the Single Cell Transplantation</strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            April, 2021 - Sept, 2021
+        </div>
+        <ul>
+            <li>This research project is supervised by <a
+                    href="https://www.nottingham.edu.cn/en/People/Profile.aspx?id=6dacb624-2867-4039-8b87-fffad430fa7a&language=en-GB">Prof.
+                Vladimir Brusic</a> Li Dak Sum Chair Professor at the University of Nottingham Ningbo China, School of
+                Computer Science.
+            </li>
+            <li>Clean, standardize, control quality of the single cell transplantation data with various convention.
+            </li>
+            <li>Automatize the four cell type classification and visualization methods, distance profile, RNA profile,
+                Protein Marker Profile, Artificial Neural Network.
+            </li>
+            <li>Investigate the rationales of the performance degradation of the ANN model on the single cell
+                transplantation data with higher gene expression.
+            </li>
+            <li>Investigate, propose, implement, and test a novel normalization approach for the promising and robust
+                distance profile analysis.
+            </li>
+        </ul>
     </div>
     </p>
     <p>
@@ -149,7 +161,9 @@
     <div>
         <strong>Virtual Classroom Project Team</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sept, 2020 - Present
     </div>
-    <div><strong>Student Intern for Software Development</strong></div>
+    <div><strong>Paid Student Intern for Software Development</strong> Detail is hidden subjected to the Non-Disclosure
+        Agreement
+    </div>
     <div>
         <ul>
             <li>Supervised by Vice Provost, <a
@@ -162,6 +176,7 @@
                 University
                 of Nottingham Ningbo China - moving towards the future.
             </li>
+            <li>One group shared patent in the application.</li>
             <li>Develop, test and utilise the university's own customised and interactive virtual reality based on
                 Unity3D with C#.
             </li>
