feat: update docs

--- a/MyProfile.html
+++ b/MyProfile.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="container">
-    <p class="h1">Yizirui FANG's Page</p>
+    <p class="h1">Yizirui FANG's Profile</p>
 </div>
 <div class="container">
     <img src="https://raw.githubusercontent.com/circleTreeF/myImg/master/GitHub_Image.jpg"
@@ -167,8 +167,7 @@
     <div>
         <ul>
             <li>Supervised by Vice Provost, <a
-                    href="https://www.nottingham.edu.cn/en/Humanities-and-Social-Sciences/People/Profile.aspx?id=20bd397e-c017-49c5-bbd5-30ee61a5d154&language=en-GB">Prof
-                May Tan-Mullins</a>, and lead by <a
+                    href="https://www.nottingham.edu.cn/en/humanities-and-social-sciences/people/profile.aspx?id=4fc89989-ec0d-4874-b0aa-e70f6fa6fd0e&language=en-GB">Dr K. Cohen Tan, FRSA, SFHEA</a>, and lead by <a
                     href="https://www.nottingham.edu.cn/en/CELE/CELE-and-CPSO-Staff/CELE-Staff-Profile.aspx?id=1b358cdc-e860-44d2-b1d6-a0b5691126bd&language=en-GB">Dr
                 Sannia Mareta</a> , focusing on the
                 exploration of Virtual Reality
