--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
           crossorigin="anonymous">
-    <title>My Page</title>
+    <title>Yizirui Fang's Page</title>
 </head>
 <body>
 <div class="container">
@@ -43,21 +43,17 @@
     <div>
         <a href="MyProfile.html" class="btn btn-default btn-lg justified" role="button">My profile website</a>
     </div>
-    <!--    <div>-->
-    <!--        <a href="docs/Yizirui_Fang_CV_Uni_of_Nottingham_Ningbo_China_Y3_CS.pdf" class="btn btn-default btn-lg justified"-->
-    <!--           role="button">My CV (Not Updated Yet. Please refer to the website)</a>-->
-    <!--    </div>-->
+        <div>
+            <a href="docs/Yizirui-FANG-CV-Uni-of-Nottingham-Ningbo.pdf" class="btn btn-default btn-lg justified"
+               role="button">My CV</a>
+        </div>
     <div>
         <div>
-            <a href="docs/Yizirui_FANG.Transcript.Uni.of.Nottingham.pdf"
+            <a href="docs/Yizirui-FANG-Transcript-with-Supplement-and-Status.pdf"
                class="btn btn-default btn-lg justified" role="button">My Transcript</a>
         </div>
 
         For mark convention, please refer to the <a href="docs/GPA_Letter.Uni.of.Nottingham.pdf">GPA Letter</a> issued by the University of Nottingham Ningbo China.
-    </div>
-    <div>
-        <a href="https://github.com/circleTreeF/my-Y2-UNNC-CW" class="btn btn-default btn-lg justified" role="button">My
-            coursework in Year 2 Autumn Semester</a>
     </div>
     <div>
         <a href="https://github.com/circleTreeF/2020_GRP_Team17" class="btn btn-default btn-lg justified" role="button">Distributed
