feat: update media news for V-ROOM projects

--- a/MyProfile.html
+++ b/MyProfile.html
@@ -26,14 +26,17 @@
     </div>
     <div> Bachelor of Science (Hons) in Computer Science</div>
     <div>
-        GPA: 4.0/4.0 (UK Grading System)
+        GPA: 3.89/4.0(WES), 4.0/4.0 (UK Grading System)
     </div>
-    <div>Expected degree: The first class with honors</div>
-    <div>Awards: 2020-2021 Zhejiang Provincial Scholarship, 2020 Head's Scholarship, 2020 Outstanding Member of Youth
-        League
+    <div>Expected degree: The First Class with Honors</div>
+    <div>Awards: 2022 Zhejiang Excellent Graduate(72/2000~), 2020-2021
+        Zhejiang Provincial Scholarship (5% selectivity), 2020-2021 Dean list (Academic Excellence Top 10%), 2020 Head's
+        Scholarship (Academic Excellence Top 20%), 2020 Outstanding Member of Youth
+        League (Community Services Top 5%)
     </div>
     <div>
-        Core modules: Machine Learning, Artificial Intelligence Method, Programming Paradigms, Database and Interfaces,
+        Core modules: Machine Learning, Computer Vision, Compiler, Artificial Intelligence Method, Programming
+        Paradigms, Database and Interfaces,
         Mathematics
         for Computer Scientists, Systems and Architecture, Software Engineering, Programming and
         algorithm, Computer Fundamentals
@@ -66,10 +69,11 @@
             </li>
             <li>Construct two necessary databases with PostgreSQL, SQLalchem, Docker and Spark.</li>
             <li>Replicate the various credit risk model.</li>
-            <li>Will propose, implement, and test novel data augmentation approach to address the population.</li>
-            <li>Will evaluate the credit risk models with Area Under Receiver Operating Characteristic (AUC), K-S, and
+            <li>Propose, implement, and test novel data augmentation approach to address the population drift.</li>
+            <li>Evaluate the credit risk models with Area Under Receiver Operating Characteristic (AUC), K-S, and
                 GINI statistics.
             </li>
+            <li>This project boosts the baseline model AUC from 0.75 to 0.80</li>
         </ul>
     </div>
     </p>
@@ -167,7 +171,8 @@
     <div>
         <ul>
             <li>Supervised by Vice Provost, <a
-                    href="https://www.nottingham.edu.cn/en/humanities-and-social-sciences/people/profile.aspx?id=4fc89989-ec0d-4874-b0aa-e70f6fa6fd0e&language=en-GB">Dr K. Cohen Tan, FRSA, SFHEA</a>, and lead by <a
+                    href="https://www.nottingham.edu.cn/en/humanities-and-social-sciences/people/profile.aspx?id=4fc89989-ec0d-4874-b0aa-e70f6fa6fd0e&language=en-GB">Dr
+                K. Cohen Tan, FRSA, SFHEA</a>, and lead by <a
                     href="https://www.nottingham.edu.cn/en/CELE/CELE-and-CPSO-Staff/CELE-Staff-Profile.aspx?id=1b358cdc-e860-44d2-b1d6-a0b5691126bd&language=en-GB">Dr
                 Sannia Mareta</a> , focusing on the
                 exploration of Virtual Reality
@@ -176,6 +181,7 @@
                 of Nottingham Ningbo China - moving towards the future.
             </li>
             <li>One group shared patent in the application.</li>
+            <li>2 millions funded by Local Government</li>
             <li>Develop, test and utilise the university's own customised and interactive virtual reality based on
                 Unity3D with C#.
             </li>
@@ -187,6 +193,14 @@
                 VR.
             </li>
             <li>Design, implement, and test the human and computer interaction features for HTC Vive Pro .</li>
+            <li>Media: We appeared on <a href="http://daily.cnnb.com.cn/xdjb/html/2022-03/18/node_2056.htm">the headline
+                of Ningbo Education (City media)</a>. <a href="http://www.zjjyb.cn/html/2022-03/18/content_35735.htm">Zhejiang
+                Education (Provincial media)</a> also reported our initiative.
+                <a href="http://dw.chinanews.com/chinanews/content.jsp?id=1212679hawqrpfdf">National media China
+                    News</a> also picked up the News. According to our third party monitoring service,
+                there are 39 news pieces, with more than 2.71 bn reach. It really shows our Teaching and Learning
+                excellence and attracts public attentions.
+            </li>
         </ul>
     </div>
     </p>
