--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <p>
         My current final year project (2021 - 2022) supervised by <a
             href="https://www.nottingham.edu.cn/en/Science-Engineering/People/Profile.aspx?id=5dbd1941-a876-41ed-aca9-96d2d0fab573&language=en-GB">Dr
-        Anthony Graham Bellotti</a> focus on the augmentation techniques for population drift (also
+        Anthony Graham Bellotti</a> focus on the augmentation techniques for population drift (also`
         concept drift)
         particularly its application in the credit risk modelling domain:<br>
         The issues this project would like to solve are that the distribution and behaviour of observations changes over
