--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <a href="MyProfile.html" class="btn btn-default btn-lg justified" role="button">My profile website</a>
     </div>
         <div>
-            <a href="docs/Yizirui-FANG-CV-Uni-of-Nottingham-Ningbo.pdf" class="btn btn-default btn-lg justified"
+            <a href="docs/Yizirui-FANG-CV.pdf" class="btn btn-default btn-lg justified"
                role="button">My CV</a>
         </div>
     <div>
