--- a/MyProfile.html
+++ b/MyProfile.html
@@ -21,12 +21,12 @@
 <div class="container">
     <p class="h2">Education</p>
     <p>
-    <div><span><strong>University of Nottingham Ningbo China</strong></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sep,
+    <div><span><strong>University of Nottingham</strong></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sep,
         2018 - Jun, 2022
     </div>
     <div> Bachelor of Science (Hons) in Computer Science</div>
     <div>
-        GPA: 3.89/4.0(WES), 4.0/4.0 (UK Grading System)
+        GPA: 3.86/4.0(WES), 4.0/4.0 (UK Grading System)
     </div>
     <div>Expected degree: The First Class with Honors</div>
     <div>Awards: 2022 Zhejiang Excellent Graduate(72/2000~), 2020-2021
