--- a/MyProfile.html
+++ b/MyProfile.html
@@ -15,20 +15,26 @@
 </div>
 <div class="container">
     <p>Yizrui Fang (George)</p>
-    <p>Tel: +86 17762570926</p>
-    <p>Professional Email: <a href="mailto:scyyf1@nottingham.edu.cn">scyyf1@nottingham.edu.cn</a></p>
 </div>
 <div class="container">
     <p class="h2">Education</p>
     <p>
+    <div>
+        <div><span><strong>Johns Hopkins University</strong></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Oct,
+            2022 - Dec, 2023
+        </div>
+        <div> Master of Science in Computer Science</div>
+
+    </div>
+    </p>
+    <p>
     <div><span><strong>University of Nottingham</strong></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sep,
         2018 - Jun, 2022
     </div>
-    <div> Bachelor of Science (Hons) in Computer Science</div>
+    <div> The First Class with Honors Bachelor of Science (Hons) in Computer Science</div>
     <div>
         GPA: 3.86/4.0(WES), 4.0/4.0 (UK Grading System)
     </div>
-    <div>Expected degree: The First Class with Honors</div>
     <div>Awards: 2022 Zhejiang Excellent Graduate(72/2000~), 2020-2021
         Zhejiang Provincial Scholarship (5% selectivity), 2020-2021 Dean list (Academic Excellence Top 10%), 2020 Head's
         Scholarship (Academic Excellence Top 20%), 2020 Outstanding Member of Youth
