feat: update student status

--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
 </div>
 <div class="container">
     <p>
-        My name is <label style="font-weight: bold">Yizirui FANG</label>. I am an Undergraduate Final Year
-        (Year 4) Computer
-        Science student at <a href="https://www.nottingham.edu.cn/">the University of
-        Nottingham Ningbo China</a>. I am interested in machine learning, particularly its application in finance,
-        and education. I am also engaged in Virtual Reality/Augmented Reality(VR/AR), and I am currently a
-        student intern in Virtual Classroom Team.
+        My name is <label style="font-weight: bold">Yizirui FANG</label>. I am a master student in computer science at <a href="https://www.jhu.edu/">Johns Hopkins University</a>,
+        before that I got the First Class BSc (Hons) in computer science from <a href="https://www.nottingham.edu.cn/">the University of Nottingham Ningbo China</a>.
+        I am interested in reliable machine learning, particularly its application in finance, and education.
+        I am also engaged in Virtual Reality/Augmented Reality(VR/AR), and I am currently a student intern in Virtual Classroom Team.
     </p>
     <p>
         My current final year project (2021 - 2022) supervised by <a
